--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <h1>hello world</h1>
 <p>this is a paragraph</p>
-<a href="rabbit.html">this is a webpage about rabbits</a>
+<a href="rabbits/index.html">this is a webpage about rabbits</a>
